1.0-3 
==========================

* Fixed a small bug in algo.cdc found by Marian Talbert Allen
  which resulted in the control$m argument being ignored.

* The constructor of the sts class now uses the argument
  "epoch" instead of weeks to make clearer that also
  daily, monthly or other data can be handled.

* Added additional epochAsDate slot to sts class. Modified
  plot functions so they can handle ISO weeks.

* algo.farrington now also computes quantile and median of 
  the predictive distribution. Furthermore has the computation
  of reference values been modified so its a) a little bit faster
  and b) it is also able to handle ISO weeks now. The reference values
  for date t0 are calculated as follows:
  For i, i=1,..., b look at date t0 - i*year. From this date on move
  w months/weeks/days to the left and right. In case of weeks:
   For each of these
  determined time points go back in time to the closest Monday


* Renamed the functions obsinyear to epochInYear, which now also
  handles objects of class Date.

1.0-2 (released on CRAN 6 Mar 2009)
===========================

* Negative Binomial CUSUM or the more general NegBin likelihood ratio
  detector is now implemented as part of algo.glrnb.
  This includes the back calculation of the required number of cases
  before an alarm.

* Time varying proportion binomial CUSUM.

0.9-10
======

* Current status: Development version available from
  http://surveillance.r-forge.r-project.org/

* Rewriting of the plot.sts.time.one function to use polygons
  instead of lines for the number of observed cases. Due cause
  a number of problems were fixed in the plotting of the legend.
  Plotting routine now also handles binomial data, where the
  number of observed cases y are stored in "observed" and the
  denominator data n are stored in "populationFrac".

* Problems with the aggregate function not operating correctly
  for the populationFrac were fixed.
