@@ -1,6 +1,12 @@
 1.0-3 
 ==========================
 
+
+* Added the function categoricalCUSUM and LRCUSUM.runlength
+  for the CUSUM monitoring of general categorical time series
+  (binomial, beta-binomial, multinomial, ordered response,
+  Bradley-Terry models).
+
 * Fixed a small bug in algo.cdc found by Marian Talbert Allen
   which resulted in the control$m argument being ignored.
 
@@ -9,7 +15,7 @@
   daily, monthly or other data can be handled.
 
 * Added additional epochAsDate slot to sts class. Modified
-  plot functions so they can handle ISO weeks.
+  plot functions so they can handle ISO weeks. 
 
 * algo.farrington now also computes quantile and median of 
   the predictive distribution. Furthermore has the computation
